--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "storybook-generate": "sb-rn-get-stories",
+    "storybook-watch": "sb-rn-watcher"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
@@ -18,16 +21,26 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-safe-area-context": "4.5.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/slider": "^4.4.2",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-controls": "^6.5.16",
+    "@storybook/addon-ondevice-actions": "^6.5.2",
+    "@storybook/addon-ondevice-controls": "^6.5.2",
+    "@storybook/react-native": "^6.5.2",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "babel-loader": "^8.3.0",
     "eslint": "^8.37.0",
     "eslint-config-universe": "^11.2.0",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "react-dom": "^18.2.0"
   },
   "private": true,
   "eslintConfig": {
