Set up storybooks switch

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
      "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "storybook-generate": "sb-rn-get-stories",
-    "storybook-watch": "sb-rn-watcher"
+    "storybook-watch": "sb-rn-watcher",
+    "storybook": "STORYBOOK_ENABLED='true' expo start"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
