--- a/package.json
+++ b/package.json
@@ -7,23 +7,28 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "storybook-generate": "sb-rn-get-stories",
     "storybook-watch": "sb-rn-watcher",
-    "storybook": "STORYBOOK_ENABLED='true' expo start"
+    "storybook": "STORYBOOK_ENABLED='true' expo start",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@testing-library/react-native": "^12.0.1",
     "@types/react": "~18.0.27",
     "dayjs": "^1.11.7",
     "expo": "~48.0.10",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "typescript": "^4.9.4",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-safe-area-context": "4.5.0",
+    "save-dev": "^0.0.1-security",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,6 +40,8 @@
     "@storybook/addon-ondevice-actions": "^6.5.2",
     "@storybook/addon-ondevice-controls": "^6.5.2",
     "@storybook/react-native": "^6.5.2",
+    "@testing-library/jest-native": "^5.4.2",
+    "@types/jest": "^29.5.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "babel-loader": "^8.3.0",
@@ -46,5 +53,11 @@
   "private": true,
   "eslintConfig": {
     "extends": "universe/native"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|unimodules|sentry-expo|react-native-svg)"
+    ]
   }
 }
