--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native": "0.71.6",
     "react-native-safe-area-context": "4.5.0",
     "save-dev": "^0.0.1-security",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
