--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "jest-expo": "^48.0.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "save-dev": "^0.0.1-security",
-    "typescript": "^4.9.4",
-    "react-native-reanimated": "~2.14.4"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
