--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "save-dev": "^0.0.1-security",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-gesture-handler": "~2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -59,6 +60,9 @@
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|unimodules|sentry-expo|react-native-svg)"
+    ],
+    "setupFiles": [
+      "<rootDir>/jest-setup.js"
     ]
   }
 }
