--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-safe-area-context": "4.5.0",
     "save-dev": "^0.0.1-security",
     "typescript": "^4.9.4",
-    "react-native-gesture-handler": "~2.9.0"
+    "react-native-gesture-handler": "~2.9.0",
+    "expo-image": "~1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
