--- a/package.json
+++ b/package.json
@@ -14,24 +14,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "@expo-google-fonts/roboto": "^0.2.3",
     "@testing-library/react-native": "^12.0.1",
     "@types/react": "~18.0.27",
     "dayjs": "^1.11.7",
     "expo": "~48.0.10",
     "expo-font": "~11.1.1",
+    "expo-image": "~1.0.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "jest": "^29.2.1",
     "jest-expo": "^48.0.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "save-dev": "^0.0.1-security",
-    "typescript": "^4.9.4",
-    "react-native-gesture-handler": "~2.9.0",
-    "expo-image": "~1.0.0"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
